--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,19 @@
     font-style: normal;
 }
 
+.dm-serif-text-regular {
+    font-family: "DM Serif Text", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+  
+  .dm-serif-text-regular-italic {
+    font-family: "DM Serif Text", serif;
+    font-weight: 400;
+    font-style: italic;
+}
+  
+
 .customBackgroundColor {
     background-color: var(--backgroundColor);
 }
@@ -31,10 +44,9 @@ html, body {
     position:relative;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 576px) {
     .center {
-        width: 300px;
-        transform: scale(0.8);
+        width: 225px;
     }
 }
 
@@ -92,6 +104,25 @@ html, body {
     border-radius: 0px 0px 50px 50px;
     height: 10px;
     width: 70%;
+}
+
+.card img {
+    object-fit: cover;
+    height: 180px;
+}
+
+.card h5 {
+    font-family: "DM Serif Text", serif;
+    font-weight: 300;
+    font-style: bold;
+    font-size: larger;
+}
+
+.card p {
+    font-family: "DM Serif Text", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: medium;
 }
 
 .player {
